# claude-meeting-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: cleanup.py
src/audiocap/: Package.swift
src/audiocap/Sources/AudioCap/: AudioTapManager.swift  RingBuffer.swift  StereoRecorder.swift  main.swift
src/claude_meeting_mcp/: __init__.py  config.py  diarize.py  live_translator.py  pv_generator.py  recorder.py  schemas.py  server.py  storage.py  transcriber.py
src/claude_meeting_mcp/capture/: __init__.py  _linux.py  _macos.py  _windows.py  audio_processing.py
tests/: test_audio_processing.py  test_config.py  test_diarize.py  test_live_translator.py  test_pv_generator.py  test_recorder.py  test_server.py  test_storage.py  test_transcriber.py
