[project]
name = "claude-meeting-mcp"
version = "0.1.0"
description = "MCP Server for meeting recording and transcription on macOS (Core Audio Taps + MLX-Whisper)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Delanoe" }]

dependencies = [
    "mcp[cli]>=1.0.0",
    "mlx-whisper>=0.4.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "faster-whisper>=1.0.0; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "numpy>=1.26.0",
    "soundfile>=0.12.0",
    "platformdirs>=4.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
claude-meeting-mcp = "claude_meeting_mcp.server:main"
transcribe = "claude_meeting_mcp.transcriber:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
