[project]
name = "claude-meeting-mcp"
version = "0.2.0"
description = "MCP Server for meeting recording and transcription — any video conferencing app, any OS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Delanoe" }]

dependencies = [
    "mcp[cli]>=1.0.0",
    "mlx-whisper>=0.4.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "faster-whisper>=1.0.0; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "numpy>=1.26.0",
    "soundfile>=0.12.0",
    "platformdirs>=4.0.0",
    "httpx>=0.27.0",
    "PyAudioWPatch>=0.2.12; sys_platform == 'win32'",
    "sounddevice>=0.4.6; sys_platform != 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]
macos = ["mlx-whisper>=0.4.0"]
windows = ["PyAudioWPatch>=0.2.12", "sounddevice>=0.4.6"]
linux = ["sounddevice>=0.4.6"]

[project.scripts]
claude-meeting-mcp = "claude_meeting_mcp.server:main"
transcribe = "claude_meeting_mcp.transcriber:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
